--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="google-site-verification" content="e4QWuVl6rDrDmYm3G1gQQf6Mv2wBpXjs6IV0kMv4_cM" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BKPSDMD Kabupaten Merangin</title>
 <link rel="shortcut icon" href="">
 <link href="index.css" rel="stylesheet" type="text/css">
@@ -80,4 +81,5 @@ function carousel() {
   })();
 </script>
 <gcse:search></gcse:search>
+
 </html>
