--- a/index.html
+++ b/index.html
@@ -131,8 +131,14 @@
 	
 </div>
 	
-<div class="rekapitulasi-asn">
-<canvas id="myChart" style="width:100%;max-width:600px"></canvas>	
+	<div class="rekapitulasi-asn"></div>
+
+<div style="width: 200px; height: 300px;">
+	<canvas id="myChart1"></canvas>
+</div>
+
+<div style="width: 200px; height: 300px; margin-top: 20px;">
+	<canvas id="myChart2"></canvas>
 </div>
 <!------------------- FOOTER ----------------------------------->	
 <div class="footer">
@@ -140,33 +146,7 @@
 </div>
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 <script src="index.js"></script>
-<script>
-const xValues = ["Italy", "France", "Spain", "USA", "Argentina"];
-const yValues = [55, 49, 44, 24, 15];
-const barColors = [
-  "#b91d47",
-  "#00aba9",
-  "#2b5797",
-  "#e8c3b9",
-  "#1e7145"
-];
-
-new Chart("myChart", {
-  type: "doughnut",
-  data: {
-    labels: xValues,
-    datasets: [{
-      backgroundColor: barColors,
-      data: yValues
-    }]
-  },
-  options: {
-    title: {
-      display: true,
-      text: "World Wide Wine Production 2018"
-    }
-  }
-});
-</script>
+<script src="chart.js"></script>
+		
 </body>
 </html>
