--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
 </div>
 	
 <div class="asn-rekap">
-	<h2>BKPSDMD DALAM ANGKA</h2>
+	<h2>STATISTIK BKPSDMD</h2>
 	<h3>Rekapitulasi ASN Kabupaten Merangin</h3>
 		<div class="chart-rekap">
-		<canvas class="flex-item-half1" id="myChart1" style="width:100%"></canvas>	
-		<canvas class="flex-item-half2" id="myChart2" style="width:100%"></canvas>	
-		<canvas class="flex-item-half3" id="myChart3" style="width:100%"></canvas>
-		<canvas class="flex-item-half4" id="myChart4" style="width:100%"></canvas>
+		<canvas class="flex-item-half1" id="myChart1"></canvas>	
+		<canvas class="flex-item-half2" id="myChart2"></canvas>	
+		<canvas class="flex-item-half3" id="myChart3"></canvas>
+		<canvas class="flex-item-half4" id="myChart4"></canvas>
 		</div>
 </div>
 <!------------------- FOOTER ----------------------------------->	
