--- a/index.html
+++ b/index.html
@@ -136,10 +136,15 @@
 	<h2>STATISTIK BKPSDMD</h2>
 	<h3>Rekapitulasi ASN Kabupaten Merangin</h3>
 		<div class="chart-rekap">
-		<canvas class="flex-item-half1" id="myChart1"></canvas>	
-		<canvas class="flex-item-half2" id="myChart2"></canvas>	
-		<canvas class="flex-item-half3" id="myChart3"></canvas>
-		<canvas class="flex-item-half4" id="myChart4"></canvas>
+		<canvas class="flex-item-half1" id="myChart1" style="max-width:330px"></canvas>	
+		<canvas class="flex-item-half2" id="myChart2" style="max-width:330px"></canvas>	
+		<canvas class="flex-item-half3" id="myChart3" style="max-width:330px"></canvas>
+		<canvas class="flex-item-half4" id="myChart4" style="max-width:330px"></canvas>
+		
+		<canvas class="flex-item-half1" id="myChart5" style="max-width:330px"></canvas>	
+		<canvas class="flex-item-half2" id="myChart6" style="max-width:330px"></canvas>	
+		<canvas class="flex-item-half3" id="myChart7" style="max-width:330px"></canvas>
+		<canvas class="flex-item-half4" id="myChart8" style="max-width:330px"></canvas>
 		</div>
 </div>
 <!------------------- FOOTER ----------------------------------->	
