--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
 		<canvas class="flex-item-half3" id="myChart7" style="max-width:330px"></canvas>
 		<canvas class="flex-item-half4" id="myChart8" style="max-width:330px"></canvas>
 		</div>
+		<div class="maps-rekap">
+		
+		</div>
 </div>
 <!------------------- FOOTER ----------------------------------->	
 <div class="footer">
