--- a/index.html
+++ b/index.html
@@ -136,21 +136,41 @@
 	<h2>STATISTIK BKPSDMD</h2>
 	<h3>Rekapitulasi ASN Kabupaten Merangin</h3>
 		<div class="chart-rekap">
-		<canvas class="flex-item-half1" id="myChart1" style="max-width:330px"></canvas>	
-		<canvas class="flex-item-half2" id="myChart2" style="max-width:330px"></canvas>	
-		<canvas class="flex-item-half3" id="myChart3" style="max-width:330px"></canvas>
-		<canvas class="flex-item-half4" id="myChart4" style="max-width:330px"></canvas>
+		<canvas class="flex-item-half1" id="myChart1" style="max-width:300px"></canvas>	
+		<canvas class="flex-item-half2" id="myChart2" style="max-width:300px"></canvas>	
+		<canvas class="flex-item-half3" id="myChart3" style="max-width:300px"></canvas>
+		<canvas class="flex-item-half4" id="myChart4" style="max-width:300px"></canvas>
 		
-		<canvas class="flex-item-half1" id="myChart5" style="max-width:330px"></canvas>	
-		<canvas class="flex-item-half2" id="myChart6" style="max-width:330px"></canvas>	
-		<canvas class="flex-item-half3" id="myChart7" style="max-width:330px"></canvas>
-		<canvas class="flex-item-half4" id="myChart8" style="max-width:330px"></canvas>
+		<canvas class="flex-item-half1" id="myChart5" style="max-width:300px"></canvas>	
+		<canvas class="flex-item-half2" id="myChart6" style="max-width:300px"></canvas>	
+		<canvas class="flex-item-half3" id="myChart7" style="max-width:300px"></canvas>
+		<canvas class="flex-item-half4" id="myChart8" style="max-width:300px"></canvas>
 		</div>
 		<div class="maps-rekap">
 		
 		</div>
 </div>
 <!------------------- FOOTER ----------------------------------->	
+	
+<div class="row">
+  <div class="column left">
+		<img src="icon/BKPLogo.png" style="width: 100%">
+		<img src="icon/BerAkhlak.png" style="width: 100%">
+  </div>
+	
+  <div class="column middle">
+		<h2>Butuh Bantuan?</h2>
+		<p>Alamat : Jl. Jendral Sudirman, No. 01, Kelurahan Pematang Kandis, Kec. Bangko - 37313</p>
+		<p>WhatsApp : +62851 5999 7813</p>
+		<p>Email : bkd.merangin@gmail.com</p>
+  </div>
+	
+  <div class="column right">
+		<h2>Column 3</h2>
+		<p>Some text..</p>
+  </div>
+</div>
+	
 <div class="footer">
 	<p>Copyright © 2025. Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah Kabupaten Merangin. All Rights Reserved.</p>
 </div>
