--- a/index.html
+++ b/index.html
@@ -154,26 +154,31 @@
 	
 <div class="row">
   <div class="column left">
-		<img src="icon/BKPLogo.png" style="width: 100%">
-		<img src="icon/BerAkhlak.png" style="width: 100%">
+		<img src="icon/BKPLogo.png" style="width: 85%">
+		<img src="icon/BerAkhlak.png" style="width: 85%">
   </div>
 	
   <div class="column middle">
-		<h2>Butuh Bantuan?</h2>
-		<p>Alamat : Jl. Jendral Sudirman, No. 01, Kelurahan Pematang Kandis, Kec. Bangko - 37313</p>
+		<h3>Butuh Bantuan?</h3>
+		<p>Alamat : Jl. Jendral Sudirman, No. 01, Kel. Pematang Kandis, Kec. Bangko, Kab. Merangin | Kode Pos - 37313</p>
 		<p>WhatsApp : +62851 5999 7813</p>
 		<p>Email : bkd.merangin@gmail.com</p>
   </div>
 	
   <div class="column right">
-		<h2>Column 3</h2>
-		<p>Some text..</p>
+		<h3>Follow Sosial Media Kami!</h3>
+	  <a href="https://www.instagram.com/bkpsdmd.merangin/?hl=en" class="fa fa-instagram"> @bkpsdmd.merangin</a>
+		<a href="#" class="fa fa-facebook"> BKPSDMD Merangin</a>
+		<a href="#" class="fa fa-twitter"> @bkpsdmdmerangin</a>
+		<a href="#" class="fa fa-youtube"> @bkpsdmd.merangin</a>
+		<a href="#" class="fa fa-tumblr"> Tik-Tok</a>
   </div>
 </div>
 	
-<div class="footer">
+<div class="footer" style="padding: 20px">
 	<p>Copyright © 2025. Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah Kabupaten Merangin. All Rights Reserved.</p>
 </div>
+	
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 	
 <script src="index.js"></script>
