--- a/index.html
+++ b/index.html
@@ -153,31 +153,39 @@
 <!------------------- FOOTER ----------------------------------->	
 	
 <div class="row">
-  <div class="column left">
-		<img src="icon/BKPLogo.png" style="width: 85%">
-		<img src="icon/BerAkhlak.png" style="width: 85%">
+  <div class="column first">
+		<img src="icon/BKPLogo.png"/>
+	  <p style="text-align: center">Copyright © 2025</p> 
+	  <p style="text-align: center">Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah (BKPSDMD) Kabupaten Merangin</p> 
+	  <p style="text-align: center">All Rights Reserved</p>
   </div>
 	
-  <div class="column middle">
+  <div class="column second">
 		<h3>Butuh Bantuan?</h3>
 		<p>Alamat : Jl. Jendral Sudirman, No. 01, Kel. Pematang Kandis, Kec. Bangko, Kab. Merangin | Kode Pos - 37313</p>
 		<p>WhatsApp : +62851 5999 7813</p>
 		<p>Email : bkd.merangin@gmail.com</p>
   </div>
 	
-  <div class="column right">
+  <div class="column third">
 		<h3>Follow Sosial Media Kami!</h3>
 	  <a href="https://www.instagram.com/bkpsdmd.merangin/?hl=en" class="fa fa-instagram"> @bkpsdmd.merangin</a>
+	  <a href="#" class="fa fa-youtube"> @bkpsdmd.merangin</a>
 		<a href="#" class="fa fa-facebook"> BKPSDMD Merangin</a>
 		<a href="#" class="fa fa-twitter"> @bkpsdmdmerangin</a>
-		<a href="#" class="fa fa-youtube"> @bkpsdmd.merangin</a>
 		<a href="#" class="fa fa-tumblr"> Tik-Tok</a>
+  </div>
+  <div class="column fourth">
+		<h3>Kunjungan Website</h3>
+		<p>Hari Ini</p>
+		<p>Total</p>
+	  <img src="icon/BerAkhlak.png"/>
   </div>
 </div>
 	
-<div class="footer" style="padding: 20px">
+<!--<div class="footer">
 	<p>Copyright © 2025. Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah Kabupaten Merangin. All Rights Reserved.</p>
-</div>
+</div>-->	
 	
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 	
