--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 	  <a href="#" class="fa fa-youtube"> @bkpsdmd.merangin</a>
 		<a href="#" class="fa fa-facebook"> BKPSDMD Merangin</a>
 		<a href="#" class="fa fa-twitter"> @bkpsdmdmerangin</a>
-		<a href="#" class="fa fa-tumblr"> Tik-Tok</a>
+		<a href="#" class="fa fa-tumblr"> @bkpsdmd.merangin</a>
   </div>
   <div class="column fourth">
 		<h3>Kunjungan Website</h3>
