--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
 	
 <div class="asn-rekap">
 	<h2>STATISTIK BKPSDMD</h2>
-	<h3>Rekapitulasi ASN Kabupaten Merangin</h3>
+	<h3>Rekapitulasi ASN Kabupaten Merangin (Desember 2024)</h3>
 		<div class="chart-rekap">
 		<canvas class="flex-item-half1" id="myChart1" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half2" id="myChart2" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half3" id="myChart3" style="max-width:300px"></canvas>
 		<canvas class="flex-item-half4" id="myChart4" style="max-width:300px"></canvas>
 		
-		<canvas class="flex-item-half1" id="myChart5" style="max-width:300px"></canvas>	
-		<canvas class="flex-item-half2" id="myChart6" style="max-width:300px"></canvas>	
-		<canvas class="flex-item-half3" id="myChart7" style="max-width:300px"></canvas>
-		<canvas class="flex-item-half4" id="myChart8" style="max-width:300px"></canvas>
+		<canvas class="flex-item-half5" id="myChart5" style="max-width:300px"></canvas>	
+		<canvas class="flex-item-half6" id="myChart6" style="max-width:300px"></canvas>	
+		<canvas class="flex-item-half7" id="myChart7" style="max-width:300px"></canvas>
+		<canvas class="flex-item-half8" id="myChart8" style="max-width:300px"></canvas>
 		</div>
 		<div class="maps-rekap">
 		
