--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	<h2>STATISTIK BKPSDMD</h2>
 	<h3>Rekapitulasi ASN Kabupaten Merangin (Desember 2024)</h3>
 		<div class="chart-rekap">
-		<canvas class="flex-item-half1" id="myChart1" style="max-width:300px"></canvas>	
+		<canvas class="flex-item-half1" id="myChart1" style="max-width:300px" "max-height:100%"></canvas>	
 		<canvas class="flex-item-half2" id="myChart2" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half3" id="myChart3" style="max-width:300px"></canvas>
 		<canvas class="flex-item-half4" id="myChart4" style="max-width:300px"></canvas>
