--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   </div>
 </div>
 
-<script>
+<!--<script>
   fetch("counter.php")
     .then(res => res.text())
     .then(count => {
@@ -194,7 +194,7 @@
     });
 </script>
 	
-<!--<div class="footer">
+<div class="footer">
 	<p>Copyright © 2025. Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah Kabupaten Merangin. All Rights Reserved.</p>
 </div>-->	
 	
