--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	
 <div class="asn-rekap">
 	<h2>STATISTIK</h2>
-	<!--style="font-size:2vw;"-->
+	<!--style="font-size:2vw;"
 	<h3>Rekapitulasi ASN Kabupaten Merangin (per Desember 2024)</h3>
 		<div class="chart-rekap">
 		<canvas class="flex-item-half1" id="myChart1" style="max-width:300px"></canvas>	
@@ -149,7 +149,8 @@
 		</div>
 		<div class="maps-rekap">
 		
-		</div>
+		</div>-->
+		<iframe width="100%" height="600" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 </div>
 <!------------------- FOOTER ----------------------------------->	
 	
