--- a/index.html
+++ b/index.html
@@ -134,10 +134,20 @@
 	
 <div class="asn-rekap">
 	<h2>STATISTIK</h2>
-	<!--style="font-size:2vw;"
+	<!--style="font-size:2vw;"-->
 	<h3>Rekapitulasi ASN Kabupaten Merangin (per Desember 2024)</h3>
 		<div class="chart-rekap">
-		<canvas class="flex-item-half1" id="myChart1" style="max-width:300px"></canvas>	
+			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%204&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			
+			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%202&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			
+			<iframe width="535" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%205&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			
+			<iframe width="535" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%209&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			
+			<iframe width="327" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%207&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			
+		<canvas class="flex-item-half1" style="max-width:325px"></canvas>
 		<canvas class="flex-item-half2" id="myChart2" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half3" id="myChart3" style="max-width:300px"></canvas>
 		<canvas class="flex-item-half4" id="myChart4" style="max-width:300px"></canvas>
@@ -149,8 +159,7 @@
 		</div>
 		<div class="maps-rekap">
 		
-		</div>-->
-		<iframe width="95%" height="600" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+		</div>
 </div>
 <!------------------- FOOTER ----------------------------------->	
 	
@@ -202,7 +211,7 @@
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 	
 <script src="index.js"></script>
-<script src="chart.js"></script>
+<!--<script src="chart.js"></script>-->
 	
 </body>
 </html>
