--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <div class="header">
-	<img src="images/HomeHeader.png" width="100%"/>
+	<img src="images/HomeHeader.jpg" width="100%"/>
   <!--<p><img src="icon/MeranginLogo.png" height="100"/></p>
   <img src="icon/BKPLogo.png" height="50"/>
   <h1>SELAMAT DATANG</h1>
