--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <div class="header">
-	<img src="images/HomeHeader.jpg" width="100%"/>
+	<img src="images/HomeHeader.jpg" width="100%" alt="Banner Home">
   <!--<p><img src="icon/MeranginLogo.png" height="100"/></p>
   <img src="icon/BKPLogo.png" height="50"/>
   <h1>SELAMAT DATANG</h1>
@@ -24,7 +24,7 @@
 <div class="topnav" id="mynavBtn">
 	
 	<div class="navLogo">
-		<a href="#1"><img src="icon/BKPLogo3.png" id="bkpsdmdLogo"/></a>	
+		<a href="#1"><img src="icon/BKPLogo3.png" id="bkpsdmdLogo" alt="Logo BKPSDMD"></a>	
 	</div>
 	<span>
 	<div class="navRight" >
@@ -92,19 +92,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="images/index_pict/1.jpg" style="width:100%">
+  <img src="images/index_pict/1.jpg" style="width:100%" alt="">
   <div class="text">Caption One</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="images/index_pict/2.jpg" style="width:100%">
+  <img src="images/index_pict/2.jpg" style="width:100%" alt="">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="images/index_pict/3.jpg" style="width:100%">
+  <img src="images/index_pict/3.jpg" style="width:100%" alt="">
   <div class="text">Caption Three</div>
 </div>
 
@@ -122,7 +122,7 @@
 
 <div class="pidato-kaban">
 	<h2> Sambutan Kepala BKPSDMD Kabupaten Merangin</h2>
-	<img src="images/Foto_Kaban.png">
+	<img src="images/Foto_Kaban.png" alt="Foto Kaban">
 	<p>Assalamu'alaikum Warahmatullahi Wabarakaatuh</p>
 	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed velit massa, scelerisque id tristique non, scelerisque sed ex. Etiam eget fermentum augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque interdum ligula neque. Morbi sit amet dui tristique orci facilisis tristique. Phasellus nisl quam, tincidunt ut lectus vitae, dapibus faucibus eros. Sed imperdiet sed est vehicula efficitur. Praesent ultricies non ipsum at sagittis. Donec scelerisque ligula eget hendrerit molestie.</p>
 	
@@ -137,21 +137,37 @@
 	<!--style="font-size:2vw;"-->
 	<h3>Rekapitulasi ASN Kabupaten Merangin (per Desember 2024)</h3>
 		<div class="chart-rekap">
+			<div class="chart-status-asn">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%204&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
 			
+			<div class="chart-gender-asn">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%202&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
 			
+			<div class="chart-age-asn">
 			<iframe width="535" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%205&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
 			
+			<div class="chart-edu-asn">
 			<iframe width="535" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%209&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
 			
+			<div class="chart-Gol-asn">
 			<iframe width="327" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%207&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
 			
+			<div class="chart-ese-asn">
 			<iframe width="326" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%208&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
 			
+			<div class="chart-kp-asn">
 			<iframe width="458" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%2011&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
 			
+			<div class="chart-jab-asn">
 			<iframe width="458" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%2010&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
 			
 		<!--<canvas class="flex-item-half1" style="max-width:325px"></canvas>
 		<canvas class="flex-item-half2" id="myChart2" style="max-width:300px"></canvas>	
@@ -161,8 +177,8 @@
 		<canvas class="flex-item-half5" id="myChart5" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half6" id="myChart6" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half7" id="myChart7" style="max-width:300px"></canvas>
-		<canvas class="flex-item-half8" id="myChart8" style="max-width:300px"></canvas>
-		</div>-->
+		<canvas class="flex-item-half8" id="myChart8" style="max-width:300px"></canvas>-->
+		</div>
 		<div class="maps-rekap">
 		
 		</div>
@@ -171,7 +187,7 @@
 	
 <div class="row">
   <div class="column first">
-		<img src="icon/BKPLogo.png"/>
+		<img src="icon/BKPLogo.png" alt="Logo BKPSDMD">
 	  <p style="text-align: center">Copyright © 2025</p> 
 	  <p style="text-align: center">Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah (BKPSDMD) Kabupaten Merangin</p> 
 	  <p style="text-align: center">All Rights Reserved</p>
@@ -197,7 +213,7 @@
 		<p>Hari Ini</p>
 		<p>Total</p>
 	  	<h3 id="visitor-count">Loading...</h3>
-	  <img src="icon/BerAkhlak.png"/>
+	  <img src="icon/BerAkhlak.png" alt="Logo BerAkhlak">
 	  
   </div>
 </div>
