--- a/index.html
+++ b/index.html
@@ -202,11 +202,7 @@
 	
   <div class="column third">
 		<h3>Follow Sosial Media Kami!</h3>
-	  <a href="https://www.instagram.com/bkpsdmd.merangin/?hl=en" class="fa fa-instagram"> @bkpsdmd.merangin</a>
-	  <a href="#" class="fa fa-youtube"> @bkpsdmd.merangin</a>
-		<a href="#" class="fa fa-facebook"> BKPSDMD Merangin</a>
-		<a href="#" class="fa fa-twitter"> @bkpsdmdmerangin</a>
-		<a href="#" class="fa fa-tumblr"> @bkpsdmd.merangin</a>
+	    <li href="https://www.instagram.com/bkpsdmd.merangin/?hl=en" class="ig"><img src="icon/sosmed/IG.png" alt="Logo IG" width="25px"></li>
   </div>
   <div class="column fourth">
 		<h3>Kunjungan Website</h3>
