--- a/index.html
+++ b/index.html
@@ -188,21 +188,38 @@
 <div class="row">
   <div class="column first">
 		<img src="icon/BKPLogo.png" alt="Logo BKPSDMD">
-	  <p style="text-align: center">Copyright © 2025</p> 
-	  <p style="text-align: center">Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah (BKPSDMD) Kabupaten Merangin</p> 
+	  <p style="text-align: center">Copyright © 2025.</p>
+	  <p style="text-align: center">Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah (BKPSDMD) Kabupaten Merangin.</p> 
 	  <p style="text-align: center">All Rights Reserved</p>
   </div>
 	
   <div class="column second">
 		<h3>Butuh Bantuan?</h3>
-		<p>Alamat : Jl. Jendral Sudirman, No. 01, Kel. Pematang Kandis, Kec. Bangko, Kab. Merangin | Kode Pos - 37313</p>
-		<p>WhatsApp : +62851 5999 7813</p>
-		<p>Email : bkd.merangin@gmail.com</p>
+	  
+		<p><a href="https://maps.app.goo.gl/idAZYTHVszUhSGRv8" target="_blank" class="Loc">
+			<img src="icon/sosmed/Loc.png" alt="Logo Loc" width="30px" style="float: left"></a> 
+			Jl. Jendral Sudirman, No. 01, Kel. Pematang Kandis, Kec. Bangko, Kab. Merangin, Prov. Jambi - Indonesia | Kode Pos - 37313</p>
+	  
+		<p><a href="https://wa.me/6285159997813" target="_blank" class="wa">
+			<img src="icon/sosmed/WA.png" alt="Logo WA" width="30px" style="text-align-last: right"></a> 
+			+62851 5999 7813</p>
+	  
+		<p><a href="https://wa.me/6285159997813" target="_blank" class="em">
+			<img src="icon/sosmed/EM.png" alt="Logo Email" width="30px" style="float: left"></a> 
+			bkd.merangin@gmail.com</p>
   </div>
 	
   <div class="column third">
 		<h3>Follow Sosial Media Kami!</h3>
-	    <li href="https://www.instagram.com/bkpsdmd.merangin/?hl=en" class="ig"><img src="icon/sosmed/IG.png" alt="Logo IG" width="25px"></li>
+		  <a href="https://www.instagram.com/bkpsdmd.merangin/?hl=en" target="_blank" class="ig"><img src="icon/sosmed/IG.png" alt="Logo IG"></a>
+	  
+		  <a href="https://www.youtube.com/@bkpsdmd.merangin" target="_blank" class="yt"><img src="icon/sosmed/YT.png" alt="Logo YT"></a>
+	  
+		  <a href="https://www.facebook.com/bkpsdmd.merangin/" target="_blank" class="fb"><img src="icon/sosmed/FB.png" alt="Logo FB"></a>
+	  
+		  <a href="https://x.com/bkpsdmdmerangin?t=a7RCgFHif89UfeV9aALj8g&s=08" target="_blank" class="x"><img src="icon/sosmed/X.png" alt="Logo X"></a>
+	  
+		  <a href="" target="_blank" class="tt"><img src="icon/sosmed/TT.png" alt="Logo TT"></a>
   </div>
   <div class="column fourth">
 		<h3>Kunjungan Website</h3>
