--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	<h2>STATISTIK</h2>
 	<!--style="font-size:2vw;"-->
 	<h3>Rekapitulasi ASN Kabupaten Merangin (per Desember 2024)</h3>
-		<div class="chart-rekap">
+		<div class="chart-rekap"><!--
 			<div class="chart-status-asn">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%204&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
@@ -169,7 +169,7 @@
 			<iframe width="458" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%2010&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
-		<!--<canvas class="flex-item-half1" style="max-width:325px"></canvas>
+		<canvas class="flex-item-half1" style="max-width:325px"></canvas>
 		<canvas class="flex-item-half2" id="myChart2" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half3" id="myChart3" style="max-width:300px"></canvas>
 		<canvas class="flex-item-half4" id="myChart4" style="max-width:300px"></canvas>
@@ -219,19 +219,19 @@
 	  
 		  <a href="https://x.com/bkpsdmdmerangin?t=a7RCgFHif89UfeV9aALj8g&s=08" target="_blank" class="x"><img src="icon/sosmed/X.png" alt="Logo X"></a>
 	  
-		  <a href="" target="_blank" class="tt"><img src="icon/sosmed/TT.png" alt="Logo TT"></a>
+		  <a href="https://www.tiktok.com/@bkpsdmd.merangin?_t=ZS-8z3dFdtzgYy&_r=1 " target="_blank" class="tt"><img src="icon/sosmed/TT.png" alt="Logo TT"></a>
   </div>
   <div class="column fourth">
 		<h3>Kunjungan Website</h3>
 		<p>Hari Ini</p>
 		<p>Total</p>
-	  	<h3 id="visitor-count">Loading...</h3>
+	  	
 	  <img src="icon/BerAkhlak.png" alt="Logo BerAkhlak">
 	  
   </div>
 </div>
 
-<!--<script>
+<!--<script> <h3 id="visitor-count">Loading...</h3>
   fetch("counter.php")
     .then(res => res.text())
     .then(count => {
