--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		<h3>Butuh Bantuan?</h3>
 	  
 		<p><a href="https://maps.app.goo.gl/idAZYTHVszUhSGRv8" target="_blank" class="Loc">
-			<img src="icon/sosmed/Loc.png" alt="Logo Loc" width="30px" style="float: left"></a> 
+			<img src="icon/sosmed/Loc.png" width="30px" style="float: left"></a> 
 			Jl. Jendral Sudirman, No. 01, Kel. Pematang Kandis, Kec. Bangko, Kab. Merangin, Prov. Jambi - Indonesia | Kode Pos - 37313</p>
 	  
 		<p><a href="https://wa.me/6285159997813" target="_blank" class="wa">
