--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </div>
 
 <div class="pidato-kaban">
-	<h2> Sekapur Sirih<br><nd>Kepala BKPSDMD Kabupaten Merangin</nd></h2>
+	<h2> Sekapur Sirih<br><p>Kepala BKPSDMD Kabupaten Merangin</p></h2>
 	<img src="images/Foto_Kaban.png" alt="Foto Kaban">
 	<p>Assalamu'alaikum Warahmatullahi Wabarakaatuh</p>
 	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed velit massa, scelerisque id tristique non, scelerisque sed ex. Etiam eget fermentum augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque interdum ligula neque. Morbi sit amet dui tristique orci facilisis tristique. Phasellus nisl quam, tincidunt ut lectus vitae, dapibus faucibus eros. Sed imperdiet sed est vehicula efficitur. Praesent ultricies non ipsum at sagittis. Donec scelerisque ligula eget hendrerit molestie.</p>
@@ -145,7 +145,7 @@
 	<h3>Rekapitulasi ASN Kabupaten Merangin (per Desember 2024)</h3>
 	<!--style="font-size:2vw;"-->
 
-		<div class="chart-rekap">
+		<div class="chart-rekap"><!--
 			<div class="chart-status-asn">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%204&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
@@ -178,7 +178,7 @@
 			<iframe width="458" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%2010&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
-		<!--<canvas class="flex-item-half1" style="max-width:325px"></canvas>
+		<canvas class="flex-item-half1" style="max-width:325px"></canvas>
 		<canvas class="flex-item-half2" id="myChart2" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half3" id="myChart3" style="max-width:300px"></canvas>
 		<canvas class="flex-item-half4" id="myChart4" style="max-width:300px"></canvas>
