--- a/index.html
+++ b/index.html
@@ -215,15 +215,15 @@
 		<h3>Butuh Bantuan?</h3>
 	  
 		<p><a href="https://maps.app.goo.gl/idAZYTHVszUhSGRv8" target="_blank" class="Loc">
-			<img src="icon/sosmed/Loc.png" width="30px" style="float: left"></a> 
+			<img src="icon/sosmed/Loc.png" alt="Logo Loc" width="30px" style="float: left"></a> 
 			Jl. Jendral Sudirman, No. 01, Kel. Pematang Kandis, Kec. Bangko, Kab. Merangin, Prov. Jambi - Indonesia | Kode Pos - 37313</p>
 	  
 		<p><a href="https://wa.me/6285159997813" target="_blank" class="wa">
-			<img src="icon/sosmed/WA.png" alt="Logo WA" width="30px" style="text-align-last: right;,vertical-align:middle"></a> 
+			<img src="icon/sosmed/WA.png" alt="Logo WA" width="30px" style="vertical-align:middle"></a> 
 			+62851 5999 7813</p>
 	  
 		<p><a href="https://wa.me/6285159997813" target="_blank" class="em">
-			<img src="icon/sosmed/EM.png" alt="Logo Email" width="30px" style="float: left, vertical-align:middle"></a> 
+			<img src="icon/sosmed/EM.png" alt="Logo Email" width="30px" style="vertical-align:middle"></a> 
 			bkd.merangin@gmail.com</p>
   </div>
 	
