--- a/index.html
+++ b/index.html
@@ -32,69 +32,68 @@
 <div class="topnav" id="mynavBtn">
 	
 	<div class="navLogo">
-		<a href="#1"><img src="icon/BKPLogo3.png" id="bkpsdmdLogo" alt="Logo BKPSDMD"></a>	
+		<a href="index.html"><img src="icon/BKPLogo3.png" id="bkpsdmdLogo" alt="Logo BKPSDMD"></a>	
 	</div>
-	<span>
+	
 	<div class="navRight" >
 		
 		<div class="dropdown">
 			<button onclick="toggleDropdown('menu1')" class="dropbtn">PROFIL <i class="fa fa-caret-down"></i></button>
 		  <div id="menu1" class="dropdown-content">
-			<a href="#1A">Visi dan Misi</a>
-			<a href="#1B">Selayang Pandang</a>
-			<a href="#1C">Sejarah</a>
-			<a href="#1D">Struktur Organisasi</a>
-			<a href="#1E">Tugas Pokok dan Fungsi</a>
+			<a href="profil.html#visiMisi">Visi dan Misi</a>
+			<a href="profil.html#selaPang">Selayang Pandang</a>
+			<a href="profil.html#sejarah">Sejarah</a>
+			<a href="profil.html#strukOrga">Struktur Organisasi</a>
+			<a href="profil.html#tuPoksi">Tugas Pokok dan Fungsi</a>
 		  </div>
 		</div>
 		
 		<div class="dropdown">
 			<button onclick="toggleDropdown('menu2')" class="dropbtn">BERITA <i class="fa fa-caret-down"></i></button>
 		  <div id="menu2" class="dropdown-content">
-			<a href="#1A">Berita Terkini</a>
-			<a href="#1B">Agenda Kegiatan</a>
+			<a href="berita.html#terkini">Berita Terkini</a>
+			<a href="berita.html#agenda">Agenda Kegiatan</a>
 		  </div>
 		</div>
 		
-		<a href="#4">LAYANAN</a>
+		<a href="layanan.html">LAYANAN</a>
 		
 		<div class="dropdown">
 			<button onclick="toggleDropdown('menu3')" class="dropbtn">TRANSPARANSI <i class="fa fa-caret-down"></i></button>
 		  <div id="menu3" class="dropdown-content">
-			<a href="#1A">Rencana Stategis</a>
-			<a href="#1B">Rencana Kerja</a>
-			<a href="#1B">Indikator Kinerja Utama</a>
-			<a href="#1B">Casscading</a>
-			<a href="#1B">Perjanjian Kinerja</a>
-			<a href="#1B">Rencana Aksi</a>
-			<a href="#1B">Laporan Kinerja</a>
-			<a href="#1B">Standar Operasional Prosedur</a>
-			<a href="#1B">RAPBD</a>
-			<a href="#1B">APBD</a>
-			<a href="#1B">LPPD</a>
+			<a href="transparansi.html#renstra">Rencana Stategis</a>
+			<a href="transparansi.html#renja">Rencana Kerja</a>
+			<a href="transparansi.html#iku">Indikator Kinerja Utama</a>
+			<a href="transparansi.html#casscad">Casscading</a>
+			<a href="transparansi.html#perkin">Perjanjian Kinerja</a>
+			<a href="transparansi.html#reaksi">Rencana Aksi</a>
+			<a href="transparansi.html#lapkin">Laporan Kinerja</a>
+			<a href="transparansi.html#sop">Standar Operasional Prosedur</a>
+			<a href="transparansi.html#rapbd">RAPBD</a>
+			<a href="transparansi.html#apbd">APBD</a>
+			<a href="transparansi.html#lppd">LPPD</a>
 		  </div>
 		</div>
 		
-		<a href="#5">P.P.I.D.</a>
+		<a href="ppid.html">P.P.I.D.</a>
 		
 		<div class="dropdown">
 			<button onclick="toggleDropdown('menu4')" class="dropbtn">GALERI <i class="fa fa-caret-down"></i></button>
 		  <div id="menu4" class="dropdown-content">
-			<a href="#1A">Album Foto</a>
-			<a href="#1B">Album Video</a>
-			<a href="#1B">Template Multimedia BKPSDMD</a>
+			<a href="galeri.html#foto">Album Foto</a>
+			<a href="galeri.html#video">Album Video</a>
+			<a href="galeri.html#tempMm">Template Multimedia BKPSDMD</a>
 		  </div>
 		</div>
 		
-		<a href="#7">PENGUMUMAN</a>
+		<a href="pengumuman.html">PENGUMUMAN</a>
 		<!--<a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i> </a>-->
 		<a href="javascript:void(0);" style="font-size:17px;" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
-	</span>
-
 </div>
 	
 <!------------------- CONTENT ----------------------------------->
+
 <div class="infoGrafis">
 	<h2>INFO GRAFIS</h2>
 	<img class="mySlides" src="images/index_pict/1.jpg">
@@ -103,40 +102,7 @@
 	<img class="mySlides" src="images/index_pict/4.jpg">
 	<img class="mySlides" src="images/index_pict/5.jpg">
 </div>
-	
-<!--	
-<div class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="images/index_pict/1.jpg" style="width:100%" alt="">
-  <div class="text">Caption One</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="images/index_pict/2.jpg" style="width:100%" alt="">
-  <div class="text">Caption Two</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="images/index_pict/3.jpg" style="width:100%" alt="">
-  <div class="text">Caption Three</div>
-</div>
-
-<a class="prev" onclick="plusSlides(-1)">❮</a>
-<a class="next" onclick="plusSlides(1)">❯</a>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-</div>
--->
 <div class="pidato-kaban">
 	<h2> Sekapur Sirih<br><p>Kepala BKPSDMD Kabupaten Merangin</p></h2>
 	<img src="images/Foto_Kaban.png" alt="Foto Kaban">
@@ -264,22 +230,8 @@
 	
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 	
-<script src="index.js"></script>
-<!--<script src="chart.js"></script>-->
-<script>
-var myIndex = 0;
-carousel();
-function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-       x[i].style.display = "none";  
-    }
-    myIndex++;
-    if (myIndex > x.length) {myIndex = 1}    
-    x[myIndex-1].style.display = "block";  
-    setTimeout(carousel, 3000);
-}
-</script>	
+<script src="JavaScript/topnav.js"></script>
+<script src="JavaScript/infografis.js"></script>
+	
 </body>
 </html>
